--- a/poker-webapp/pom.xml
+++ b/poker-webapp/pom.xml
@@ -19,12 +19,16 @@
 
     <properties>
         <web.context.name>poker-webapp</web.context.name>
+        <cxf.version>3.1.2</cxf.version>
+        <spring.version>4.1.6.RELEASE</spring.version>
+        <jackson.version>2.6.2</jackson.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -46,6 +50,17 @@
             <groupId>com.sap.ui5</groupId>
             <artifactId>themelib_sap_bluecrystal</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
