--- a/poker-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/poker-webapp/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
                              http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     version="2.5" xmlns="http://java.sun.com/xml/ns/javaee">
+
     <display-name>poker-webapp</display-name>
 
     <servlet>
@@ -23,51 +24,23 @@
         <param-value>true</param-value>
     </context-param>
 
-    <filter>
-        <display-name>CacheControlFilter</display-name>
-        <filter-name>CacheControlFilter</filter-name>
-        <filter-class>com.sap.ui5.resource.CacheControlFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.html</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.js</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.css</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.json</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.xml</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.gif</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.png</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.jpg</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.properties</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CacheControlFilter</filter-name>
-        <url-pattern>*.tmpl</url-pattern>
-    </filter-mapping>
+    <servlet>
+        <display-name>CXFNonSpringJaxrsServlet</display-name>
+        <servlet-name>CXFNonSpringJaxrsServlet</servlet-name>
+        <servlet-class>org.apache.cxf.jaxrs.servlet.CXFNonSpringJaxrsServlet</servlet-class>
+        <init-param>
+            <param-name>jaxrs.providers</param-name>
+            <param-value>com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider</param-value>
+        </init-param>
+        <init-param>
+            <param-name>jaxrs.serviceClasses</param-name>
+            <param-value>com.sap.ase.poker.TexasPokerService</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CXFNonSpringJaxrsServlet</servlet-name>
+        <url-pattern>/api/*</url-pattern>
+    </servlet-mapping>
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
