--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,10 +32,11 @@
 			<param-value>OurVerySecretiveHighlyClassifiedSharedSecret</param-value>
 		</init-param>
 	</filter>
+	<!--
 	<filter-mapping>
 		<filter-name>SecFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 
     <servlet>
         <display-name>CXFNonSpringJaxrsServlet</display-name>
