--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.sap.ui5</groupId>
-		<artifactId>maven-webapp-pom</artifactId>
-		<version>1.32.3</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.4.RELEASE</version>
+		<relativePath />
 	</parent>
 
 	<groupId>com.sap.ase</groupId>
@@ -19,60 +19,49 @@
 	<description>Poker application</description>
 
 	<properties>
-		<web.context.name>poker</web.context.name>
-		<cxf.version>3.1.2</cxf.version>
-		<spring.version>4.1.6.RELEASE</spring.version>
-		<jackson.version>2.6.2</jackson.version>
+		<java.version>1.8</java.version>
+		<ui5.version>1.32.3</ui5.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>com.sap.ui5</groupId>
 			<artifactId>resource</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${ui5.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sap.ui5</groupId>
 			<artifactId>core</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${ui5.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sap.ui5</groupId>
 			<artifactId>mobile</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${ui5.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sap.ui5</groupId>
 			<artifactId>themelib_sap_bluecrystal</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${ui5.version}</version>
 		</dependency>
-		
+
+
+		<!-- Spring Security Dependency -->
 		<dependency>
-		    <groupId>javax.xml.bind</groupId>
-		    <artifactId>jaxb-api</artifactId>
-		    <version>2.3.0</version>
-		</dependency>		
-		<dependency>
-			<groupId>javax.activation</groupId>
-			<artifactId>javax.activation-api</artifactId>
-			<version>1.2.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.1.4.RELEASE</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
-			<version>${cxf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.jaxrs</groupId>
-			<artifactId>jackson-jaxrs-json-provider</artifactId>
-			<version>${jackson.version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.auth0</groupId>
@@ -89,11 +78,8 @@
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
 				<groupId>org.pitest</groupId>
